tests/stdlib/bad/unknown_module.hel
// @name unknown_module
// @phase stdlib
// @expect error

import std.not_a_module

main = () : IO<()> {
    0
}
